Basic content plus link strucutre

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
 <title>Hello world</title>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Hello World!</h1>
 <p>testing github pages</p>
+<h2>Projects:</h2>
+<p><ul>
+  <li><a href="http://www.cienistosc.pl" target="_blank">Cienistość.pl</a> - nail art blog. motif from Theme Forest on Wordpress.</li>
+  <li><a href="">Hello World</a> - my very first html paige build from scratch, place for coding practice and experimenting.</li>
+  <li><a href="">Tribute Page</a> for Polish fantasy &amp; science-fiction writer Jarosław Grzędowicz. Project for Free Code Camp "Responsive Web Developer Certification".</li>
+</ul>
+</p>
 </body>
 </html>
